tests/NormalTests/paczka1/fuzzy1/32654974.err
Error in line 2: S901 S901 27,3
Error in line 6: 18D S858 84,8
Error in line 24: EpwVYRNrP S978 37,2
Error in line 33: EpwVYRNrP S858 36,38
Error in line 37: 18D S978 32,8
Error in line 39: S901 S858 9,3
